--- a/src/app/grid/mini-grid/mini-grid.component.css
+++ b/src/app/grid/mini-grid/mini-grid.component.css
@@ -9,5 +9,47 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+}
+
+.button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 40px;
+  height: 40px;
+  padding: 2px;
+  border-radius: 5px;
+  z-index: 2;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: var(--background-color-darker);
+  border: #252525 1px solid;
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button:hover {
+  background-color: var(--divider-color);
+}
+
+.icon-container {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+mat-icon {
+  width: 100%;
+  height: 100%;
+  color: var(--text-color);
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+}
+
+.highlighted {
+  background-color: #3f51b5;
 }
