--- a/src/app/sidebar/encyclopedia/encyclopedia.component.css
+++ b/src/app/sidebar/encyclopedia/encyclopedia.component.css
@@ -53,6 +53,7 @@
   flex-direction: column;
   align-items: center;
   width: 250px;
+  height: 450px;
   background-color: var(--background-color-darker);
   padding: 10px;
   border-radius: 5px;
@@ -65,13 +66,14 @@
   align-items: center;
   width: 100%;
   margin-bottom: 10px;
+  height: 50px;
 }
 
 app-mini-grid {
   width: 250px;
   height: 250px;
   border-radius: 5px;
-  border: white 2px solid;
+  border: var(--primary-color) 1px solid;
   overflow: hidden;
   box-shadow: var(--shadow-dark);
 }
@@ -100,4 +102,50 @@ button:hover {
 .pattern p {
   text-align: center;
   height: 100px;
+}
+
+.insert-form {
+  display: flex;
+  flex-direction: column;
+  color: lightgray;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.insert-form:hover {
+  background-color: #838383;
+}
+
+.button {
+  background: none;
+  border: none;
+  color: var(--text-color);
+  font-size: 14px;
+  cursor: pointer;
+  padding: 10px 2px;
+  text-align: left;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.button:hover {
+  background-color: #838383;
+}
+
+.input {
+  background-color: #b6b6b6;
+  color: #252525;
+  border-radius: 5px;
+  border: 1px solid #b6b6b6;
+  height: 30px;
+  font-size: 16px;
+}
+
+.input:focus {
+  outline: none !important;
+}
+
+.invalid-input {
+  border-color: darkred !important;
+  background-color: #ffb4b4;
 }
